# SupplyTrackerMVP

./: .replit  README.md  database.py  generate_data.py  main.py  ml_predictor.py  models.py  pyproject.toml  replit.md  risk_model.pkl  scaler.pkl  schemas.py  train_model.py
static/: index.html
